[gd_scene load_steps=21 format=2]

[ext_resource path="res://theo.png" type="Texture" id=1]
[ext_resource path="res://sprites/theme_of_themes.tres" type="Theme" id=2]
[ext_resource path="res://scenes/UI/Transitioner.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/Icons/twitter.png" type="Texture" id=4]
[ext_resource path="res://scripts/buttonLink.gd" type="Script" id=5]
[ext_resource path="res://sprites/Icons/tiktok.png" type="Texture" id=6]
[ext_resource path="res://sprites/Icons/youtube.png" type="Texture" id=7]
[ext_resource path="res://sprites/Icons/instagram.png" type="Texture" id=8]
[ext_resource path="res://sprites/Icons/discord.png" type="Texture" id=9]
[ext_resource path="res://sprites/Icons/pyros.png" type="Texture" id=10]
[ext_resource path="res://scripts/MenuActions.gd" type="Script" id=11]
[ext_resource path="res://sprites/Icons/pixellogo/lighter.mp3" type="AudioStream" id=12]
[ext_resource path="res://sprites/Icons/pixellogo/fire(1).mp3" type="AudioStream" id=14]

[sub_resource type="GDScript" id=3]
script/source = "extends Control
export var disableForDebug = true

func _ready():
	print(\"TODO: Fixare HUD nello spawn, anzi toglierla proprio se non per la chat.\")
	
	randomize()
	var titles = [
		\"Capybaras are always valid\",
		\"made by pyros.dev\",
		\"Ok lets go\",
		\"Avoid PHP at all costs\",
		\"Look mother, I am a hat\",
		\"No autoclickers allowed\",
		\"Officina Tecnologica\",
		\"John China\",
		\"Imagine using joomla...\",
		\"Hilarious\",
		\"Godot Engine\",
		\"Hehehe HA\",
		\"What a giullare...\",
		\"Ole ole\",
		\"I swear\",
		\"Check out pyros.dev\"
	]
	OS.set_window_title(\"Dreamout: %s!\" % RNGTools.pick(titles))
	
	if !OS.has_feature(\"standalone\"):
		if disableForDebug:
			get_tree().change_scene(\"res://MatWorld.tscn\")
		
		if \"listen\" in OS.get_cmdline_args():
			$Actions/NameInput.text = \"Tro\"
			$Actions/NameInput.emit_signal(\"text_changed\", \"Tro\")
		elif \"join\" in OS.get_cmdline_args():
			$Actions/NameInput.text = \"SLAVE\"
			$Actions/NameInput.emit_signal(\"text_changed\", \"SLAVE\")			
		
		
"

[sub_resource type="GDScript" id=4]
script/source = "extends LinkButton

export (String) var link

func _ready():
	pass


func _on_Button_pressed():
	OS.shell_open(\"https://\" + link)
"

[sub_resource type="GDScript" id=5]
script/source = "extends ColorRect


func _ready():
	if !OS.has_feature(\"standalone\"):
		queue_free()
	$LighterSound.play()
	yield(get_tree().create_timer(0.7), \"timeout\")
	$AnimationPlayer.play(\"To Left\")
	yield(get_tree().create_timer(0.1), \"timeout\")	
	$FireSound.play()
#	$Tween.interpolate_property($Sprite, \"modulate\", Color(\"00ffffff\"), Color(\"ffffff\"), 0.8)
#	$Tween.start()
	


func _on_AnimationPlayer_animation_finished(anim_name):
	if anim_name == \"To Left\":
		yield(get_tree().create_timer(1), \"timeout\")
#		owner.get_node(\"Actions\").show()
		$Tween.interpolate_property(self, \"modulate\", modulate, Color(\"00ffffff\"), 0.6)
		$Tween.start()



func _on_FireSound_finished():
	queue_free()
"

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/logo.png-cca8726399059c8d4f806e28e356b14d.stex"

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 9.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 0.0 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("FireSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/2/type = "audio"
tracks/2/path = NodePath("LighterSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.059
margin_right = -0.0589905
theme = ExtResource( 2 )
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
disableForDebug = false

[node name="Bg" type="TextureRect" parent="."]
modulate = Color( 0.223529, 0.223529, 0.223529, 1 )
margin_right = 416.0
margin_bottom = 362.0
rect_scale = Vector2( 0.769, 0.497 )
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 48.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0.733333 )
margin_right = 71.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 6

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 10 )

[node name="LinkButton" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
margin_left = 22.0
margin_right = 71.0
margin_bottom = 16.0
size_flags_horizontal = 5
size_flags_vertical = 5
button_mask = 7
text = "pyros.dev"
underline = 1
script = SubResource( 4 )
link = "https://pyros.dev"

[node name="VBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0.733333 )
margin_top = 20.0
margin_right = 63.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 6

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 63.0
margin_bottom = 10.0
text = "v0.0.2 ALPHA"

[node name="Actions" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 104.0
margin_right = 96.0
margin_bottom = 176.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="Actions"]
margin_right = 72.0
margin_bottom = 20.0
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Actions"]
margin_top = 24.0
margin_right = 72.0
margin_bottom = 40.0
focus_mode = 1
button_mask = 7
enabled_focus_mode = 1
text = "Host"

[node name="Play2" type="Button" parent="Actions"]
margin_top = 44.0
margin_right = 72.0
margin_bottom = 60.0
focus_mode = 1
button_mask = 7
enabled_focus_mode = 1
text = "Join Temp"

[node name="Hub" type="Button" parent="Actions"]
visible = false
margin_top = 20.0
margin_right = 72.0
margin_bottom = 36.0
focus_mode = 1
button_mask = 7
enabled_focus_mode = 1
text = "Hub"

[node name="Settings" type="Button" parent="Actions"]
visible = false
margin_top = 64.0
margin_right = 72.0
margin_bottom = 80.0
focus_mode = 1
button_mask = 7
enabled_focus_mode = 1
text = "SETTINGS"

[node name="Lobby" type="VBoxContainer" parent="."]
visible = false
margin_left = 213.0
margin_top = 28.0
margin_right = 295.0
margin_bottom = 101.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Lobby"]
margin_right = 82.0
margin_bottom = 10.0
text = "-- PLAYERS --"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Lobby"]
margin_top = 14.0
margin_right = 82.0
margin_bottom = 47.0
bbcode_enabled = true
bbcode_text = "Connecting..."
text = "Connecting..."
fit_content_height = true
scroll_active = false

[node name="StartButton" type="Button" parent="Lobby"]
visible = false
margin_top = 14.0
margin_right = 82.0
margin_bottom = 30.0
text = "STARTGAME"

[node name="Logo" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = 24.0
margin_right = 256.0
margin_bottom = 88.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Socials" type="HBoxContainer" parent="."]
margin_left = 200.0
margin_top = 152.0
margin_right = 704.0
margin_bottom = 216.0
rect_scale = Vector2( 0.2, 0.2 )
custom_constants/separation = 30
alignment = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Discord" type="TextureButton" parent="Socials"]
margin_left = 80.0
margin_top = 6.0
margin_right = 144.0
margin_bottom = 57.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
button_mask = 7
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
script = ExtResource( 5 )

[node name="Youtube" type="TextureButton" parent="Socials"]
margin_left = 174.0
margin_top = 3.0
margin_right = 238.0
margin_bottom = 60.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
button_mask = 7
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Twitter" type="TextureButton" parent="Socials"]
margin_left = 268.0
margin_right = 332.0
margin_bottom = 64.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
button_mask = 7
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
script = ExtResource( 5 )
link = "twitter.com/dreamoutgame"

[node name="Insta" type="TextureButton" parent="Socials"]
margin_left = 362.0
margin_right = 418.0
margin_bottom = 64.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
button_mask = 7
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
script = ExtResource( 5 )

[node name="Tiktok" type="TextureButton" parent="Socials"]
margin_left = 448.0
margin_right = 504.0
margin_bottom = 64.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
button_mask = 7
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
script = ExtResource( 5 )

[node name="Transitioner" parent="." instance=ExtResource( 3 )]

[node name="LoadingScreen" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0, 0, 0, 1 )
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LoadingScreen"]
position = Vector2( 160, 90 )
texture = SubResource( 6 )
hframes = 4
vframes = 4
frame = 9
__meta__ = {
"_editor_description_": "YXNlcHJpdGVfd2l6YXJkX2NvbmZpZwpwbGF5ZXJ8PUxvYWRpbmdTY3JlZW4vQW5pbWF0aW9uUGxheWVyCnNvdXJjZXw9cmVzOi8vc3ByaXRlcy9JY29ucy9waXhlbGxvZ28vbG9nby5hc2Vwcml0ZQpsYXllcnw9Cm9wX2V4cHw9RmFsc2UKb19mb2xkZXJ8PQpvX25hbWV8PQpvbmx5X3Zpc2libGV8PUZhbHNlCm9fZXhfcHw9Cg=="
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LoadingScreen"]
"anims/Fire Starter" = SubResource( 7 )
anims/Static = SubResource( 8 )
"anims/To Left" = SubResource( 9 )

[node name="Tween" type="Tween" parent="LoadingScreen"]

[node name="LighterSound" type="AudioStreamPlayer" parent="LoadingScreen"]
stream = ExtResource( 12 )
volume_db = 10.0

[node name="FireSound" type="AudioStreamPlayer" parent="LoadingScreen"]
stream = ExtResource( 14 )
volume_db = -6.0

[connection signal="text_changed" from="Actions/NameInput" to="Actions" method="_on_NameInput_text_changed"]
[connection signal="pressed" from="Actions/Play" to="Actions" method="_on_Play_pressed"]
[connection signal="pressed" from="Actions/Play2" to="Actions" method="_on_Play2_pressed"]
[connection signal="pressed" from="Actions/Hub" to="." method="_on_Hub_pressed"]
[connection signal="pressed" from="Actions/Hub" to="Actions" method="_on_Hub_pressed"]
[connection signal="pressed" from="Lobby/StartButton" to="Actions" method="_on_StartButton_pressed"]
[connection signal="pressed" from="Socials/Discord" to="Socials/Discord" method="_on_Button_pressed"]
[connection signal="pressed" from="Socials/Youtube" to="Socials/Youtube" method="_on_Button_pressed"]
[connection signal="pressed" from="Socials/Twitter" to="Socials/Twitter" method="_on_Button_pressed"]
[connection signal="pressed" from="Socials/Insta" to="Socials/Insta" method="_on_Button_pressed"]
[connection signal="pressed" from="Socials/Tiktok" to="Socials/Tiktok" method="_on_Button_pressed"]
[connection signal="animation_finished" from="LoadingScreen/AnimationPlayer" to="LoadingScreen" method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="LoadingScreen/FireSound" to="LoadingScreen" method="_on_FireSound_finished"]
